--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "reset": "rimraf node_modules package-lock.json && npm i"
   },
   "private": true,
   "dependencies": {
@@ -47,6 +48,7 @@
     "express": "^4.16.4",
     "firebase": "^5.7.2",
     "morgan": "^1.9.1",
+    "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
     "zone.js": "^0.8.29"
   },
